# toolrack

./: .toolrack.cache.json  AGENTS.md  README.md  pyproject.toml
.github/workflows/: unit-tests.yml
src/toolrack/: __main__.py  cli.py
tests/: conftest.py  test_cli.py  test_cross_shell.py
